--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs": "^0.0.1-security",
     "html-pdf": "^3.0.1",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.15.1",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
