--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.1",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
